fix a design failure with the concept create implementation - broke API compatibility.  Enhanced the return type of RestWriteResponse and RestIdentifiedType to return more information.